// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when get entity failed 1`] = `
<BasicSection>
  <Error
    type="DEFAULT"
  />
</BasicSection>
`;

exports[`should render correctly when get is in progress 1`] = `
<BasicSection>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;

exports[`should render correctly when has a talent entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <withRouter(Connect(TalentEditOrCreate))
      entity={
        Object {
          "entityType": "talent",
          "id": "some-id",
        }
      }
      isEdit={true}
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has a venue entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <VenueEditOrCreate
      entity={
        Object {
          "entityType": "venue",
          "id": "some-id",
        }
      }
      isEdit={true}
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has an event entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <EventEditOrCreate
      entity={
        Object {
          "entityType": "event",
          "id": "some-id",
        }
      }
      isEdit={true}
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has an event series entity 1`] = `
<FadeTransition
  appear={true}
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <BasicSection>
    <EventSeriesEditOrCreate
      entity={
        Object {
          "entityType": "event-series",
          "id": "some-id",
        }
      }
      isEdit={true}
    />
  </BasicSection>
</FadeTransition>
`;

exports[`should render correctly when has no entity 1`] = `
<BasicSection>
  <BoxesLoader
    size="large"
    type="default"
  />
</BasicSection>
`;
